--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.0",
+    "three": "^0.148.0",
     "validator": "^13.7.0"
   }
 }
